--- a/SAE/Statistique_BD/sae_radio.ipynb
+++ b/SAE/Statistique_BD/sae_radio.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -326,93 +326,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0           NaN\n",
-      "1           NaN\n",
-      "2     79.800000\n",
-      "3     79.866667\n",
-      "4     80.233333\n",
-      "5     80.000000\n",
-      "6     79.566667\n",
-      "7     79.300000\n",
-      "8     79.466667\n",
-      "9     79.266667\n",
-      "10    79.000000\n",
-      "11    78.666667\n",
-      "12    78.400000\n",
-      "13    78.033333\n",
-      "14    77.366667\n",
-      "15    77.300000\n",
-      "16    77.333333\n",
-      "17          NaN\n",
-      "18          NaN\n",
-      "19          NaN\n",
-      "20    74.200000\n",
-      "21    72.900000\n",
-      "22    72.900000\n",
-      "23    73.333333\n",
-      "24    73.766667\n",
-      "25    72.766667\n",
-      "26    71.633333\n",
-      "27    71.133333\n",
-      "28    71.200000\n",
-      "29    71.033333\n",
-      "30    70.200000\n",
-      "31    69.600000\n",
-      "Name: AC, dtype: float64\n",
-      "0          NaN\n",
-      "1          NaN\n",
-      "2     0.998747\n",
-      "3     1.011686\n",
-      "4     0.999585\n",
-      "5     0.987500\n",
-      "6     0.999162\n",
-      "7     1.001261\n",
-      "8     1.000419\n",
-      "9     0.995374\n",
-      "10    0.994937\n",
-      "11    0.997881\n",
-      "12    0.996173\n",
-      "13    0.993165\n",
-      "14    0.988798\n",
-      "15    1.007762\n",
-      "16    1.003448\n",
-      "17         NaN\n",
-      "18         NaN\n",
-      "19         NaN\n",
-      "20    0.986523\n",
-      "21    0.978052\n",
-      "22    1.017833\n",
-      "23    1.015909\n",
-      "24    0.984184\n",
-      "25    0.978470\n",
-      "26    0.992555\n",
-      "27    0.999531\n",
-      "28    1.002809\n",
-      "29    0.993900\n",
-      "30    0.977208\n",
-      "31    1.000000\n",
-      "Name: AC, dtype: float64\n",
-      "test decomp_serie moy mob :  False\n",
-      "test decomp_serie coef sais :  False\n"
+      "test decomp_serie moy mob :  True\n",
+      "test decomp_serie coef sais :  True\n"
      ]
     }
    ],
    "source": [
     "def decomp_serie():\n",
-    "    serie_mm = data_audience['AC'].rolling(window=3).mean() # skipna=True ne marche pas\n",
-    "    serie_coef_sais = data_audience['AC'] / serie_mm # coef_sais = AC / mm\n",
+    "    # serie_mm = data_audience['AC'].rolling(window=4, center=True).mean() # skipna=True ne marche pas\n",
+    "    # serie_coef_sais = data_audience['AC'] / serie_mm # coef_sais = AC / mm\n",
+    "    # print(serie_mm, serie_coef_sais)\n",
     "    \n",
-    "    \n",
-    "    print(serie_mm)\n",
-    "    print(serie_coef_sais)\n",
-    "    return serie_mm, serie_coef_sais # serie_mm, serie_coef_sais\n",
+    "    rolling1 = data_audience['AC'].rolling(window=4, center=True).mean()\n",
+    "    rolling2 = data_audience['AC'].rolling(window=4, center=True).mean().shift(-1)\n",
+    "    mm = (rolling2 + rolling1)/2\n",
+    "   \n",
+    "    s1 = data_audience['AC'] / mm\n",
+    "    data_audience['S1'] = s1\n",
+    "    s2 = data_audience.groupby('Periode')['S1'].mean()\n",
+    "    meanS2 = s2.mean()\n",
+    "    s3 = s2 / meanS2\n",
+    "\n",
+    "    serie_mm_df = pd.Series(mm)\n",
+    "    serie_coef_sais = pd.Series(s3)\n",
+    "\n",
+    "    return serie_mm_df,serie_coef_sais\n",
+    "    # return serie_mm, serie_coef_sais # serie_mm, serie_coef_sais\n",
     "\n",
     "res_moy_mob=[np.nan, np.nan, 80.0, 79.9375, 79.9, 79.7, 79.4375, 79.3375, 79.2125, 78.9875, 78.7, 78.35, 77.9125, 77.575, 77.4375, np.nan, np.nan, np.nan, np.nan, np.nan, 73.35, 73.26249999999999, 73.225, 73.1375, 72.7375, 71.925, 71.35, 71.125, 70.7375, 70.2375, np.nan, np.nan]\n",
     "coef_sais={}\n",
@@ -454,7 +400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
