sae math & anglais

--- a/SAE/Statistique_BD/sae_radio.ipynb
+++ b/SAE/Statistique_BD/sae_radio.ipynb
@@ -249,9 +249,6 @@
     "    \"\"\"\n",
     "    res = []\n",
     "    \n",
-    "    # contrib.unstack               -> passe les donnée (radio) en colone en index\n",
-    "    # .sort_values(ascending=False) -> trie les donnée pour avoir les valeurs les plus grande en haut\n",
-    "    # .head(n)                      -> prend le nombre n de donnée demandé\n",
     "    temp = contrib.unstack().sort_values(ascending=False).head(n)\n",
     "    showDF(temp)\n",
     "    \n",
@@ -260,12 +257,6 @@
     "        if eff_obs.loc[i[1], i[0]] > eff_theo.loc[i[1], i[0]]: signe = \"+\"\n",
     "        else : signe = \"-\"\n",
     "        res.append((i[1], i[0], signe, temp.loc[i[0], i[1]]))\n",
-    "        \n",
-    "        # Todo demander à léa\n",
-    "        # style, radio = temp.index[i]\n",
-    "        # if eff_obs.loc[style, radio] > eff_theo.loc[style, radio]: signe = \"+\"\n",
-    "        # else : signe = \"-\"\n",
-    "        # res.append((style, radio, signe, temp.iloc[style, radio]))\n",
     "        \n",
     "    \n",
     "    for i in res : print(i)\n",
@@ -326,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -371,12 +362,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test prévision :  True\n"
+     ]
+    }
+   ],
    "source": [
     "def prevision(annee_prev,trim_prev,serie_coef_sais):\n",
-    "    return # une valeur\n",
+    "    data_audience = pd.read_csv(path+'audience_cumulee_radio.csv', sep=';', decimal=',')\n",
+    "    data_audience = data_audience.dropna(subset=['AC'])\n",
+    "    data_audience['Date'] = (data_audience['Annee'] - data_audience['Annee'][0]) * 4 + data_audience['Periode']\n",
+    "    Pente, ordonee_origine, _, _, _ = st.linregress(data_audience['Date'], data_audience['AC'])\n",
+    "    time_prevu = (annee_prev - data_audience['Annee'][0]) * 4 + trim_prev\n",
+    "    prevision = (Pente * time_prevu + ordonee_origine) * serie_coef_sais[trim_prev]\n",
+    "    return prevision\n",
     "\n",
     "prev=prevision(2024,4,serie_coef_sais)\n",
     "res=68.7763620276032\n",
